1.5
----------
Put a limit on biomes trying to be taller than the world (Alps)


1.4
----------
Added Biomes O Plenty support
    Select BoP Hex Lands as world type
Removed force hex generation option for now
Remove lava lake config option now removes all lava lakes
Tried making a few config options more clear


1.3
----------
Fixed crop circles generating at center of hex
Fixed land not flooding when below sea level
Added config to adjust extra height ocean biomes are lowered by 
Fixed vanilla structures not spawning
Adjusted oceans height to be deep enough for monuments 
Adjusted border height to not float above river/ocean biomes

1.2
----------
Mod configs now show in options menu (thanks TehNut)
Rim blocks can now use meta data with the @ symbol
	minecraft:concrete@6
Fixed biomeSize config option sometimes being ignored
Added config option to generate Hex dimension
    Note: this option is meant for pack makers. There is no way to travel to this dim unless added
Added config option to force Hex generation in the overworld, even when Hex Lands world type is not selected
Added more config options to better control of which vanilla structures to generate 


1.1
----------
Can be run on server without client having mod installed. When run on a dedicated server, edit the server.properties to:
	level-type=hexlands
Added border to bedrock config


1.0
----------
Made a thing