@@ -1,6 +1,8 @@
 1.5
 ----------
 Put a limit on biomes trying to be taller than the world (Alps)
+Add forced world option back in
+Added config option for nether hex generation
 
 
 1.4
